--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,7 +12,14 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["package.json", "package-lock.json"],
+        "assets": [
+          "package.json",
+          "package-lock.json",
+          "backend/package.json",
+          "backend/package-lock.json",
+          "frontend/package.json",
+          "frontend/package-lock.json"
+        ],
         "message": "chore(package number): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
         "addChannel": false
       }
