--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,6 +10,12 @@
       }
     ],
     [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "node scripts/sync-versions.js"
+      }
+    ],
+    [
       "@semantic-release/git",
       {
         "assets": [
@@ -20,8 +26,7 @@
           "frontend/package.json",
           "frontend/package-lock.json"
         ],
-        "message": "chore(package number): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
-        "addChannel": false
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
   ]
